--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,8 +1,13 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="protected views">
     <ion-content class="padding">
         <div ng-if="!isAuthenticated()">
-            <button ng-click="authenticate('facebook')" class="button button-block icon-left ion-social-facebook">
-                Sign in with Facebook
+            <button ng-click="test()" class="button button-block icon-left ion-social-facebook">
+                test headers
+            </button>
+        </div>
+        <div ng-if="!isAuthenticated()">
+            <button ng-click="logout()" class="button button-block icon-left ion-social-facebook">
+                logout
             </button>
         </div>
     </ion-content>
