working good too

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login">
+<ion-view view-title="Login" cache="false">
     <ion-content class="padding">
         <div ng-if="!isAuthenticated()">
             <!-- <div> -->
